# quant-intraday

./: .gitattributes  .gitignore  .pre-commit-config.yaml  GOLD_MINI_CHARTER.md  MASTER_BLUEPRINT_Claude_Build_Handoff.md  README.md  SPEC_MultiETF_Rotation.md  pyproject.toml
.github/workflows/: ci.yml
aws/: config.yaml
config/: default.yaml  etf_universe.yaml  factor_default.yaml  nse_holidays.yaml  universe.yaml
config/env/: dev.yaml  live.yaml  paper.yaml
docs/: FINDINGS.md  Indian_Intraday_Algo_Trading_Project_Plan.md  PROGRESS.md
docs/deep_dives/: 01_DeepDive_Data_and_Feature_Layer.md  02_DeepDive_Research_Layer.md  03_DeepDive_Capital_Layer.md  04_DeepDive_Execution_Layer.md  05_DeepDive_Operations_Layer.md  06_DeepDive_Control_Layer_Mobile_App.md
docs/etf_rotation/: README.md  pm_viability_prereg.md  pm_viability_verdict.md  step1_liquidity_gate.md  step2_cost_model.md  step3_benchmark.md  step4_5_verdict.md
docs/iteration_log/: budget.md  closeout.md  cycle-1_diagnostic.md  cycle-1_verdict.md  cycle-2_finding.md  cycle-3_plan.md  cycle-3a_finding.md  cycle-3b_decision.md  cycle-4_finding.md  cycle-4_verdict.md  cycle-5_closeout.md  cycle-5_diagnostic.md  cycle-5_finding.md  deferred.md  p3x_cycle1_finding.md  p3x_cycle2_cluster_combiner.md  p3x_data_sourcing.md  p3x_spec.md
docs/mechanisms/: PREREGISTRATION_TEMPLATE.md  README.md  budget.md  cointegration_pairs_prereg.md  cointegration_pairs_verdict.md  gate7_closeout.md  index_rebalance_prereg.md  index_rebalance_verdict.md  pead_prereg.md  pead_verdict.md
docs/operator_runbooks/: P2.8_robustness.md  P2.9_killgate.md  P2A.1_kite_signup.md  P2A.2_daily_auth.md  P2A.3_backfill.md  P2A.4_research_env.md  P2A.5_aws_setup.md  P2A.6_final_run.md
docs/runbooks/: kite_session.md
docs/turtle/: P3T.2_etf_universe_and_data.md
scripts/: backfill_etf.py  build_nifty500_panel.py  check_backfill.py  check_etf_data.py  etf_benchmark.py  etf_liquidity_gate.py  etf_portfolio.py  etf_rotation.py  etf_spread_sampler.py  fetch_corporate_actions.py  kite_morning_auth.py  run_backfill.py  run_complete_pipeline.py  run_factor_gate.py  run_final_training.py  run_p7_pairs.py  run_robustness.py  run_validation_report.py  verify_kite_credentials.py
src/quant/: __init__.py
src/quant/capital/: __init__.py  errors.py
src/quant/capital/combine/: __init__.py
src/quant/capital/portfolio/: __init__.py  construction.py
src/quant/capital/risk/: __init__.py
src/quant/capital/sizing/: __init__.py  sizing.py
src/quant/control/: __init__.py
src/quant/core/: __init__.py  audit.py  calendar.py  config.py  frames.py  interfaces.py  logging.py  secrets.py  types.py
src/quant/data/: __init__.py
src/quant/data/brokers/: __init__.py  auth.py  client.py  errors.py  instruments.py  kite.py  morning_auth.py  rate_limit.py  ticker.py  verify.py
src/quant/data/features/: __init__.py  cross_sectional.py  errors.py  harness.py  microstructure.py  normalize.py  regime.py  returns.py  technical.py  temporal.py  volatility.py  vwap.py
src/quant/data/hygiene/: __init__.py  bad_ticks.py  corporate_actions.py  errors.py  gaps.py  liquidity.py  survivorship.py
src/quant/data/ingest/: __init__.py  backfill.py  backfill_cli.py  bhavcopy.py  check_cli.py  errors.py  stream.py
src/quant/data/quality/: __init__.py  dashboard.py  report.py
src/quant/data/recorders/: __init__.py  depth.py  errors.py  events.py
src/quant/data/store/: __init__.py  arctic.py  errors.py  parquet.py  redis_store.py  serde.py
src/quant/execution/: __init__.py
src/quant/execution/oms/: __init__.py
src/quant/execution/reconcile/: __init__.py
src/quant/execution/router/: __init__.py
src/quant/execution/safety/: __init__.py
src/quant/execution/shortfall/: __init__.py
src/quant/ops/: __init__.py
src/quant/ops/attribution/: __init__.py
src/quant/ops/drift/: __init__.py
src/quant/ops/mlops/: __init__.py
src/quant/ops/monitor/: __init__.py
src/quant/ops/platform/: __init__.py
src/quant/ops/scheduler/: __init__.py
src/quant/research/: __init__.py
src/quant/research/etf/: __init__.py  benchmark.py  costs.py  errors.py  liquidity.py  portfolio.py  rotation.py  spreads.py  universe.py
src/quant/research/factors/: __init__.py  cluster_selection_combiner.py  combine.py  corporate_actions.py  errors.py  gate.py  price_factors.py  universe.py
src/quant/research/features_research/: __init__.py  errors.py  frac_diff.py
src/quant/research/labeling/: __init__.py  barriers.py  bootstrap.py  cross_sectional.py  cusum.py  errors.py  meta.py  triple_barrier.py  weights.py
src/quant/research/mechanisms/: __init__.py  errors.py  index_rebalance.py  pairs.py  pead.py  preregistration.py  spec.py  trials.py
src/quant/research/models/: __init__.py  baseline.py  calibration.py  ensemble.py  errors.py  estimators.py  evaluation.py  importance.py  regime.py  tuning.py  (+3 more)
tests/: __init__.py
tests/adversarial/: __init__.py  leakage.py  leaky_features.py  sample_data.py  test_factor_leakage.py  test_future_correlation.py  test_no_lookahead.py  test_trailing_normalization.py  test_train_serve_skew.py
tests/integration/: __init__.py
tests/unit/: __init__.py  brokers_fakes.py  hygiene_fakes.py  ingest_fakes.py  models_fakes.py  pipeline_fakes.py  store_fakes.py  stream_fakes.py  test_audit.py  test_backfill_cli.py  test_bhavcopy.py  test_brokers_auth.py  test_brokers_client.py  test_brokers_confinement.py  test_brokers_instruments.py  test_brokers_kite.py  test_brokers_morning_auth.py  test_brokers_rate_limit.py  test_brokers_ticker.py  test_brokers_verify.py  test_calendar.py  test_capital_construction.py  test_config.py  test_etf_benchmark.py  test_etf_costs.py  test_etf_liquidity.py  test_etf_portfolio.py  test_etf_rotation.py  test_etf_spreads.py  test_etf_universe.py  test_factors_cluster_selection.py  test_factors_combine.py  test_factors_corporate_actions.py  test_factors_gate.py  test_factors_price.py  test_factors_universe.py  test_features_cross_sectional.py  test_features_harness.py  test_features_microstructure.py  test_features_normalize.py  (+81 more)
(+32 files in other folders)
