# Project metadata, dependencies, and tooling config for the quant-intraday system.
# Single source of truth: ruff/black/mypy/pytest all read their config from here,
# and the same versions are used locally (pre-commit), in CI, and by developers.

[project]
name = "quant-intraday"
version = "0.0.0"
description = "Indian intraday algorithmic trading system for liquid cash equities (MIS, 15-min decision clock) + mobile master-control."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
# Runtime dependencies grow per subtask so the surface stays auditable and minimal
# (e.g. kiteconnect in P1.1, lightgbm in P2.6).
dependencies = [
    "pydantic>=2.7",       # typed, validated, immutable config schema (P0.2)
    "pyyaml>=6.0",         # YAML config loading (P0.2)
    "tzdata>=2024.1",      # IANA tz database so zoneinfo resolves IST on any OS (P0.3)
    "pandas>=2.2",         # bulk time-series bars cross boundaries as DataFrames (P0.5 hybrid)
    "numpy>=1.26",         # vectorised feature math (log returns, vol estimators) (P1.6)
    "kiteconnect>=4.2,<6", # Zerodha Kite Connect SDK, confined to data/brokers/ (P1.1)
    "pyarrow>=16",         # Parquet engine for the immutable raw archive tier (P1.3)
    "ta-lib>=0.6.8",       # technical indicators, never hand-rolled; prebuilt wheels incl. manylinux (P1.7)
]

# Optional storage backends, confined to data/store/ and imported lazily (P1.3).
# Installed on demand by the operator, e.g. `uv sync --extra redis`.
#
# arcticdb (the versioned research tier) is deliberately NOT declared here: it pins
# `pandas<3` and would drag the whole project's locked pandas down from 3.x. Install
# it ad hoc in a pandas<3 environment (`pip install "arcticdb>=5,<7"`) — or swap the
# warm tier for QuestDB later; the `Repository` interface makes that a clean swap.
# Either way the repository logic is fully unit-tested here against a fake library.
[project.optional-dependencies]
redis = [
    "redis>=5",            # hot/live store client (RedisLiveStore); no pandas constraint
]

# Dev tooling lives in a PEP 735 dependency group, installed by `uv sync` by
# default. These are the quality gates, not runtime requirements.
[dependency-groups]
dev = [
    "ruff>=0.11,<0.12",
    "black>=24.10",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "types-PyYAML>=6.0",   # type stubs for pyyaml (mypy strict)
    "pandas-stubs>=2.2",   # type stubs for pandas (mypy strict)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src/ layout: the importable package is `quant` under src/.
[tool.hatch.build.targets.wheel]
packages = ["src/quant"]

# --------------------------------------------------------------------------- #
# Ruff - linter + import sorter. Black owns formatting (see [tool.black]); ruff
# is configured to be black-compatible (same line length, no formatter overlap).
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# A strong-but-practical rule set. Typing is enforced by mypy (strict), so we do
# not also enable ruff's ANN rules (avoids double-reporting). Docstrings (D) are
# on, because Ground Rule 5 mandates docstrings on public modules/classes/funcs.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modern syntax)
    "B",   # flake8-bugbear (likely bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib (no os.path)
    "RUF", # ruff-specific rules
    "D",   # pydocstyle (docstring presence/format)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests document themselves through descriptive names; per-function docstrings
# are not required there.
"tests/**" = ["D"]

# --------------------------------------------------------------------------- #
# Black - the formatter (Ground Rule 7 names ruff+black). Line length matches
# ruff so the two never fight.
# --------------------------------------------------------------------------- #
[tool.black]
line-length = 100
target-version = ["py312"]

# --------------------------------------------------------------------------- #
# mypy - static typing, strict. "Types are documentation that can't go stale."
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

# The kiteconnect SDK ships no type information; treat it as untyped (its use is
# confined to data/brokers/ and fronted by our own KiteClient Protocol).
[[tool.mypy.overrides]]
module = ["kiteconnect.*"]
ignore_missing_imports = true

# Optional storage backends are not installed in the default (CI) environment, and
# their use is confined to data/store/ behind our own narrow Protocols. Treat them as
# untyped so a CI without them installed still type-checks the lazy factory shims.
[[tool.mypy.overrides]]
module = ["arcticdb.*", "redis.*"]
ignore_missing_imports = true

# TA-Lib is a C-extension wrapper that ships no type information; its use is confined to
# data/features/technical.py behind our own typed Series wrappers.
[[tool.mypy.overrides]]
module = ["talib"]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: cross-module / broker-sandbox tests (deselect with -m 'not integration')",
    "adversarial: injected-failure safety tests (deselect with -m 'not adversarial')",
]

# --------------------------------------------------------------------------- #
# coverage.py
# --------------------------------------------------------------------------- #
[tool.coverage.report]
# Lines that are non-executable by design (Protocol/interface stubs, type-only).
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(typing\\.)?overload",
    "\\.\\.\\.",
]
